Added Combat boxes. Major refactor of CSS

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-    <h1 class="o-title">Character Sheet</h1>
+    <h1 class="c-title">Character Sheet</h1>
     <character-builder></character-builder>
 
     <!-- In production use:
