--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
     <h1 class="c-title">Character Sheet</h1>
